CSS/components/sections.css
.section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.section p {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.mein_coaching_header {
    margin-top: 0;
    margin-bottom: -2%;
    position: relative;
    width: 100%;
}

.header_mein_coaching_header {
    font-size: 3rem;
    text-align: center;
    margin: 40px;
    position: relative;
    padding: 20px;
}

.header_mein_coaching_header::before, .header_mein_coaching_header::after {
    content: '';
    position: absolute;
    left: 10%;
    right: 10%;
    height: 1px;
    background-color: black;
}

.header_mein_coaching_header::before {
    top: 0;
}

.header_mein_coaching_header::after {
    bottom: 0;
}

.block {
    text-align: center;
    background-color: rgb(253, 253, 253);
    position: relative;
    margin-bottom: 0px;
    width: 100%;
}

.block h2 {
    margin-top: 20px;
}

.block-title {
    margin: 0;
    padding: 10px 0;
    font-size: 2.5rem;
    font-weight: normal;
}

.block-text {
    text-align: left;
    font-size: 1.7rem;
    padding: 0;
    font-weight: 100;
    width: 65%;
}

.block-only-text {
    display: flex;
    font-size: 2rem;
    width: 40%;
    text-align: left;
}

.content-container {
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.block-list {
    list-style-type: none;
    text-align: left;
    font-size: 2rem;
    font-weight: 100;
    margin-top: 10px;
    padding-left: 10px;
    flex-basis: 27%;
}

.block-list li {
    margin: 10px;
    position: relative;
    padding-left: 20px;
}

.block-list li::before {
    content: '- ';
    position: absolute;
    left: 0;
}

.block-image {
    width: 500px;
    margin-top: auto;
    height: auto;
    border-radius: 10px;
    flex-basis: 20%;
}

.block-list-button {
    display: block;
    margin: 20px auto;
    color: white;
    background-color: black;
    font-family: 'Roboto', sans-serif;
    font-size: 2.2rem;
    letter-spacing: 2px;
    font-weight: 150;
    height: 60px;
    width: 500px;
    border: 1px solid black;
    border-radius: 5px;
    transition: background-color 0.3s, color 0.3s;
}

.block-list-button:hover {
    background-color: rgba(0, 0, 0, 0);
    color: black;
}

.image-button-container {
    width: auto;
    padding: 0;
}

.text_and_list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 20px;
    width: 40%;
}

@media (max-width: 499px) {
    .header_mein_coaching_header {
        font-size: 0.8rem;
        margin-top: 0;
    }

    .block-title {
        font-size: 1rem;
    }

    .block-image {
        width: 90%;
        height: auto;
    }

    .block-list-button {
        width: 90%;
        height: 40px;
        font-size: 1rem;
        font-weight: normal;
    }

    .content-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .text_and_list {
        width: 80%;
    }

    .block-text {
        font-size: 0.8rem;
        width: 100%;
        padding: 10px;
    }

    .block-list {
        font-family: 'Roboto', sans-serif;
        letter-spacing: 1px;
        font-size: 0.8rem;
        margin-top: -40px;
        padding-left: 0; 
    }
}

